# python-package-template

./: README.md  cookiecutter.json  todo.txt
{{cookiecutter.repo_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.repo_name}}/docs/: README.md
{{cookiecutter.repo_name}}/docs/source/: conf.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  hello.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/apps/: main_cli.py
{{cookiecutter.repo_name}}/tests/{{cookiecutter.package_name}}/: test_hello.py
{{cookiecutter.repo_name}}/tests/{{cookiecutter.package_name}}/apps/: test_main_cli.py
